--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-        <pre>
+        <pre>London/SE "people doing strange things with electricity..." since 2001:
      _               _     _             _    _                    _
     | |             | |   | |           | |  | |                  | |
   __| |  ___   _ __ | | __| |__    ___  | |_ | |  ___   _ __    __| |  ___   _ __
