--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-        <pre>London/SE "people doing strange things with electricity..." since 2001:
+        <pre>
      _               _     _             _    _                    _
     | |             | |   | |           | |  | |                  | |
   __| |  ___   _ __ | | __| |__    ___  | |_ | |  ___   _ __    __| |  ___   _ __
  / _` | / _ \ | '__|| |/ /| '_ \  / _ \ | __|| | / _ \ | '_ \  / _` | / _ \ | '_ \
 | (_| || (_) || |   |   &lt; | |_) || (_) || |_ | || (_) || | | || (_| || (_) || | | |
  \__,_| \___/ |_|   |_|\_\|_.__/  \___/  \__||_| \___/ |_| |_| \__,_| \___/ |_| |_| {% if post.number %}<b>#{{ post.number }}</b>{% endif %}
+           
+           "people doing strange things with electricity..." since 2001
         </pre>
