--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,5 @@
 | (_| || (_) || |   |   &lt; | |_) || (_) || |_ | || (_) || | | || (_| || (_) || | | |
  \__,_| \___/ |_|   |_|\_\|_.__/  \___/  \__||_| \___/ |_| |_| \__,_| \___/ |_| |_| {% if post.number %}<b>#{{ post.number }}</b>{% endif %}
            
-           "people doing strange things with electricity..." since 2001
+             "people doing strange things with electricity" since 2001
         </pre>
