formatting fix or break??

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -3,9 +3,12 @@
 {% if post.start %}<b>When:</b>  {{ post.start | date:"%H:%M" }}-{{ post.end | date:"%H:%M" }}, {{ post.start | date:"%a %b %-d %Y" }}{% endif %}
 {% if post.where %}<b>Where:</b> {{ site.data.locations.[post.where].where_html }}       (directions below)
 {% endif %}
-{{ post.content }}
-{{ site.data.locations.[post.where].directions }}
+</pre>
 
+{{ post.content }}
+
+<pre>
+{{ site.data.locations.[post.where].directions }}
 </pre>
 
 <div id="paginator">
