--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,11 @@
     <style>
         body {
             margin: auto;
-            max-width: 90%;
-            min-width: 480px;
+            max-width: 800px;
             font-family: "Courier Prime", monospace;
-            font-weight: 400;
+            font-weight: 600;
             font-style: normal;
-            font-size: 16px;
+            font-size: 20px;
             padding:0;
             background-color: black;
             color: #EEE;
