Add padding otherwise we hit the window frame

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
             font-weight: 500;
             font-style: normal;
             font-size: 20px;
-            padding:0;
+            padding: 15px;
             background-color: black;
             color: #EEE;
             line-height: 1.1;
